# libbot

./: .gitignore  CMakeLists.txt  README
bot2-core/: CMakeLists.txt
bot2-core/src/bot_core/: lcm_util.c
bot2-frames/: CMakeLists.txt
bot2-frames/src/: CMakeLists.txt  bot_frames.c
bot2-frames/src/renderer/: CMakeLists.txt  frame_modifier_renderer.c
bot2-lcm-utils/src/tunnel/: CMakeLists.txt  lcm_tunnel.cpp  lcm_tunnel.h  lcm_tunnel_server.cpp  lcm_tunnel_server.h
bot2-lcmgl/: CMakeLists.txt
bot2-lcmgl/src/bot_lcmgl_client/: CMakeLists.txt
bot2-lcmgl/src/bot_lcmgl_render/: CMakeLists.txt
bot2-param/: CMakeLists.txt
bot2-param/src/param_client/: CMakeLists.txt  param_internal.c  param_internal.h  param_util.c
bot2-param/src/param_server/: param_server.c  param_tool.c
bot2-param/src/param_tester/: param_dump.c  param_tester.c
bot2-procman/python/src/bot_procman/: sheriff.py
bot2-procman/src/deputy/: CMakeLists.txt  procman_deputy.c  test-deputy-active.cpp
bot2-vis/src/bot_vis/: CMakeLists.txt  param_widget.c  viewer.c  viewer.h
catkin/bot_core/: CMakeLists.txt  package.xml
catkin/bot_core/cmake/: bot-core-includes.cmake
catkin/bot_frames/: CMakeLists.txt  package.xml
catkin/bot_frames_lcmtypes/: CMakeLists.txt  package.xml
catkin/bot_lcm_utils/: CMakeLists.txt  package.xml
catkin/bot_lcm_utils/src/: bot-spy
catkin/bot_lcmgl/: CMakeLists.txt  package.xml
catkin/bot_lcmgl_lcmtypes/: CMakeLists.txt  package.xml
catkin/bot_param/: CMakeLists.txt  package.xml
catkin/bot_param_lcmtypes/: CMakeLists.txt  package.xml
catkin/bot_procman/: CMakeLists.txt  package.xml  setup.py
catkin/bot_procman/launch/: bot_procman_lpc.launch  bot_procman_npc.launch
catkin/bot_procman_lcmtypes/: CMakeLists.txt  package.xml
catkin/bot_vis/: CMakeLists.txt  package.xml
