<?xml version="1.0"?>
<package format="2">
  <name>bot_frames</name>
  <version>1.0.0</version>
  <description>The bot_frames package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>bot_core</depend>
  <depend>bot_param</depend>
  <depend>bot_vis</depend>
  <depend>bot_lcmgl</depend>
  <depend>bot_frames_lcmtypes</depend>
  <depend>libglib-dev</depend>
  <depend>opengl</depend>
  <depend>glut</depend>
</package>
