<?xml version="1.0"?>
<package format="2">
  <name>bot_lcmgl</name>
  <version>0.0.0</version>
  <description>The bot_lcmgl package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>bot_lcmgl_lcmtypes</depend>
  <depend>bot_vis</depend>
  <depend>libglib-dev</depend>
  <depend>zlib</depend>
  <depend>opengl</depend>
  <depend>glut</depend>
</package>
