<?xml version="1.0"?>
<package format="2">
  <name>bot_param</name>
  <version>1.0.0</version>
  <description>The bot_param package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>bot_core</depend>
  <depend>bot_param_lcmtypes</depend>
</package>
