<?xml version="1.0"?>
<package format="2">
  <name>bot_procman</name>
  <version>0.0.0</version>
  <description>The bot_procman package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>bot_procman_lcmtypes</depend>
  <depend>libglib-dev</depend>
</package>
