<?xml version="1.0"?>
<package format="2">
  <name>bot_vis</name>
  <version>1.0.0</version>
  <description>The bot_vis package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>bot_core</depend>
  <depend>libglib-dev</depend>
  <depend>gtk2</depend>
  <depend>opengl</depend>
  <depend>glut</depend>
  <depend>zlib</depend>
  <depend>libx11-dev</depend>
  <depend>libpng12-dev</depend>
</package>
